deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse-service
  labels:
    app: warehouse
spec:
  selector:
    app: warehouse
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
