deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warehouse-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: warehouse-service
                port:
                  number: 80
